# pygame

./: .appveyor.yml  .editorconfig  .gdbinit  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  .travis.yml.disable  .travis_osx.sh  .travis_osx_after_success.sh  .travis_osx_before_install.sh  .travis_osx_install.sh  .travis_osx_upload_whl.py  10th class maths game  AdvUninstLog.nsh  BUGS  BUILD.rst  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  Car_simulator  Climb the mountain  Default_Setup_Win.in  FAQ.rst  First try  Harsh  IMPORTANT_MOVED.txt  MANIFEST.in  MakePrebuilt.bat  MakePrebuilt71.bat  MakePrebuilt90.bat  Makefile  NEWS.txt  PYTHON3  Power gol  Pygame Physics.sln  Pygame Physics.vcproj  Pygame_Physics.sln  Pygame_Physics.vcproj  (+96 more)
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
Document/: API List.txt  Physics algorithm.txt  ToDoList.txt
PYD/: Readme_Test_List.txt  test1.py  test2.py  test3.py  test4.py  test5.py
SDL/: __init__.py  active.py  array.py  audio.py  cdrom.py  constants.py  darwin.py  dll.py  endian.py  error.py  events.py  image.py  joystick.py  keyboard.py  mixer.py  mouse.py  quit.py  rwops.py  sound.py  timer.py  ttf.py  version.py  video.py
Test/: Main.c  Makefile  Test.vcproj  pgPhysicsRenderer.c  pgPhysicsRenderer.h
_headers/: camera_doc.h  color_doc.h  cursors_doc.h  draw_doc.h  event_doc.h  key_doc.h  locals_doc.h  mask_doc.h  midi_doc.h  music_doc.h  pixelcopy_doc.h  pygame_doc.h  sdl2_video_doc.h  sprite_doc.h  time_doc.h  transform_doc.h
appveyor/: download_pypy.ps1  install.ps1  run_with_compiler.cmd
blitting/: alphablit.py  blittest.py  mockc.py  mockctest.py
buildconfig/: Car racing games  MANIFEST.in  Makefile  Setup.Android.SDL2.in  Setup.Emscripten.SDL2.in  Setup.SDL1.in  Setup.SDL2.in  Setup_Darwin.in  Setup_Unix.in  Setup_Win_Camera.in  Setup_Win_Common.in  __main__.py  appveyor.yml  bundle_docs.py  config.py  config_conan.py  config_darwin.py  config_emsdk.py  config_msys.py  config_msys2.py  config_unix.py  config_win.py  download_msys2_prebuilt.py  download_win_prebuilt.py  makeref.py  msysio.py  pip_config.ini  setup_win_common.py  version.py.in  vstools.py
config/: __init__.py  bundle_docs.py  clangccompiler.py  config_compiler.py  config_darwin.py  config_generic.py  config_modules.py  config_msys.py  config_unix.py  config_win.py  distutilsext.py  dll.py  helpers.py  intelccompiler.py  libconfig.py  mingw.cfg  mingw32distutils.py  mingwcfg.py  msys.py  msysio.py  pkgconfig.py  sdlconfig.py
configtest/: readme.txt  test-sdl-config  test-smpeg-config  test_config_msys.py  test_config_msys_i.py  test_config_win.py  test_dll.py  test_msys.py
doc/: BuildDarwin.txt  BuildMinGW.txt  BuildUnix.txt  BuildVC.txt  MODULES.txt  MODULE_FAQ.txt  Makefile  RELEASE.txt  api_template.xml  building.rst  capi.rst  conf.py  create_cref.py  create_doc.py  create_htmlref.py  create_rstref.py  extending.rst  index.rst  index.txt  manual.txt  modules.rst  pygame-manual.txt  sdl-manual.txt
docs/: .buildinfo  CD.html  Channel.html  Font.html  Joystick.html  README.md  Rect.html  Sound.html  Surface.html  __init__.py  __main__.py  c_api.html  contributors.txt  filepaths.html  fullinstall.txt  genindex.html  how_to_contribute.md  howto_release_pygame.txt  index.html  init.txt  install.txt  issue_template.md  logos.html  objects.inv  py-modindex.html  pygame.html  pygame_cdrom.html  pygame_constants.html  pygame_display.html  pygame_event.html  pygame_font.html  pygame_image.html  pygame_joystick.html  pygame_key.html  pygame_mixer.html  pygame_mouse.html  pygame_music.html  pygame_surfarray.html  pygame_time.html  search.html  (+2 more)
es/: ChimpanceLineaporLinea.rst
examples/: README.rst  Readme.txt  __init__.py  __movie_test.py  aacircle.py  aliens.py  arraydemo.py  audiocapture.py  blend_fill.py  blit_blends.py  boilerplate.py  camera.py  chimp.py  cursors.py  dodge.py  dropevent.py  eventlist.py  exposerenderer.py  fastevents.py  font_filter_by_language.py  font_viewer.py  fonty.py  freetype_misc.py  glcube.py  glcube_scaled.py  go.py  go_over_there.py  grid.py  headless_no_windows_needed.py  hello_world.py  import.py  joystick.py  keyboard.py  liquid.py  mask.py  midi.py  mouse.py  moveit.py  movieplayer.py  music_drop_fade.py  (+31 more)
examples_pygame/: aliens.py  arraydemo.py  blit_blends.py  cursors.py  draw.py  fastevents.py  moveit.py  overlay.py  readme.txt  sound_array_demos.py  stars.py  vgrade_numpy.py
include/: _pygame.h  glTestSuite.h  pgAABBBox.h  pgBodyObject.h  pgCollision.h  pgComplexExtensions.h  pgDeclare.h  pgHelpFunctions.h  pgJointObject.h  pgShapeObject.h  pgVector2.h  pgWorldObject.h  pgcompat.h  pgphysics.h  pygame_freetype.h  pygame_mask.h  pygame_mixer.h
lib/: Py25Queue.py  UserRect.py  __init__.py  _camera_opencv_highgui.py  _camera_vidcapture.py  _dummybackend.py  _ffplaybackend.py  _numpysndarray.py  _numpysurfarray.py  _vlcbackend.py  camera.py  color.py  colordict.py  colorpalettes.py  compat.py  cursors.doc  cursors.py  examples.doc  font.py  freetype.py  ftfont.py  helmetb.txt  locals.doc  locals.py  mac_scrap.py  macosx.py  midi.doc  midi.py  nmovie.py  numpyarray.py  pkgdata.py  pygame_icon.icns  resources.py  sndarray.doc  sndarray.py  sprite.doc  sprite.py  surfarray.doc  surfarray.py  sysfont.py  (+4 more)
manylinux-build/: Makefile  README.rst  build-wheels.sh  enable-repoforge.sh  install-portmidi.sh  install-sdl-libs.sh
prebuilt-template/: Make32.bat  Setup_Win.in  readme.html  readme71.html  readme90.html
pygame/: __init__.py  array.py  base.py  cdrom.py  constants.py  cursors.py  display.py  draw.py  event.py  font.py  image.py  joystick.py  key.py  mixer.py  mouse.py  music.py  overlay.py  pkgdata.py  rect.py  sndarray.py  surface.py  surfarray.py  sysfont.py  time.py  transform.py
python3/: README  Setup.in  __init__.py
reST/: Makefile  make.bat
src/: CPS.h  SDLmain.m  _arraysurfarray.c  _camera.c  _ff_all.h  _ffmovie_aud.h  _ffmovie_vid.h  _freetype.c  _gcommand.c  _gcommand.h  _gmovie.c  _gmovie.h  _gsound.c  _gsound.h  _numericsndarray.c  (+165 more)
(+1549 files in other folders)
