[project]
name = "pygame"
authors = [{ name = "A community project.", email = "pygame@pygame.org" }]
description = "Python Game Development"
readme = "README.rst"  # Assuming long_description is in README.rst; adjust filename as needed
license = { text = "LGPL" }
classifiers = [
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Assembly",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Objective C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
keywords = ["games", "multimedia", "graphics", "sound", "music", "development"]
requires-python = ">=3.6"
dynamic = [ "entry-points", "version" ]

[project.urls]
Documentation = "https://pygame.org/docs"
"Bug Tracker" = "https://github.com/pygame/pygame/issues"
Source = "https://github.com/pygame/pygame"
Twitter = "https://twitter.com/pygame_org"

[build-system]
requires = ["setuptools==59.6.0", "wheel==0.37.1", "cython==3.0.0"]
build-backend = "setuptools.build_meta"
