# metadata for python 3.6 builds
[metadata]
name = pygame
author = A community project.
author_email = pygame@pygame.org
url = pygame.org
description = Python Game Development
long_description = file: README.rst
keywords = games, multimedia, graphics, sound, music, development
license = LGPL
classifiers =
    Development Status :: 6 - Mature
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Assembly
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Objective C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: MIDI
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Capture :: Digital Camera
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Graphics :: Viewers
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[tox:tox]
envlist = py{36,37,38,39,310,311,312}
skip_missing_interpreters = True
skipsdist = True

[testenv]
deps =
    numpy
setenv =
    SDL_AUDIODRIVER=disk
    SDL_VIDEODRIVER=dummy
passenv =
    PORTMIDI_INC_PORTTIME
commands =
    python -m buildconfig -auto
    pip install .
    python -m pygame.tests

[options.entry_points]
pyinstaller40 =
	hook-dirs = pygame.__pyinstaller:get_hook_dirs

[isort]
include_trailing_comma = True
known_first_party = pygame
known_third_party = numpy, distutils, setuptools, sphinx
line_length = 88
multi_line_output = 3
src_paths = src_py

[pylint.MESSAGES CONTROL]
extension-pkg-whitelist=pygame
enable=
    use-symbolic-message-instead,

disable=
    attribute-defined-outside-init,
    broad-except,
    duplicate-code,
    empty-docstring,
    fixme,
    global-statement,
    global-variable-undefined,
    import-error,
    import-outside-toplevel,
    invalid-name,
    missing-docstring,
    no-member,
    protected-access,
    raise-missing-from,
    redefined-builtin,
    redefined-outer-name,
    super-with-arguments,
    too-few-public-methods,
    too-many-arguments,
    too-many-branches,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    undefined-all-variable,
    undefined-variable,
    unused-import, # False positive because there are no __all__ sometime.
    useless-object-inheritance,
    wrong-import-order,
    wrong-import-position,
